Rename module to remove FME identity

--- a/javascript-console-share-aikau/pom.xml
+++ b/javascript-console-share-aikau/pom.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>javascript-console-share-aikau</artifactId>
+    
+    <groupId>de.axelfaust.alfresco</groupId>
+    <artifactId>de.axelfaust.alfresco.jsconsole.share.aikau</artifactId>
+    
     <name>JavaScript Console - Share (Aikau-variant)</name>
-    <description>Alfresco Share-Extras JavaScript Console - Share (Aikau-variant) Module</description>
+    <description>Alfresco JavaScript Console - Share (Aikau-variant) Module</description>
+    
     <packaging>amp</packaging>
 
     <parent>
@@ -14,7 +18,7 @@
     
     <developers>
         <developer>
-            <id>a.faust</id>
+            <id>afaust</id>
             <name>Axel Faust</name>
             <roles>
                 <role>Developer</role>
@@ -89,26 +93,6 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-
-            <!-- Compress JavaScript files and store as *-min.js -->
-
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <nonFilteredFileExtensions>
-                        <nonFilteredFileExtension>js</nonFilteredFileExtension>
-                        <nonFilteredFileExtension>css</nonFilteredFileExtension>
-                        <nonFilteredFileExtension>ftl</nonFilteredFileExtension>
-
-                    </nonFilteredFileExtensions>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
 
     <profiles>
 
