--- a/javascript-console-share-aikau/src/main/amp/module.properties
+++ b/javascript-console-share-aikau/src/main/amp/module.properties
@@ -1,6 +1,4 @@
-# JavascriptConsole-share module properties
-module.id=de.fme.alfresco.JavascriptConsole-share-aikau
-module.aliases=jsconsole-share-aikau
+module.id=${project.artifactId}
 module.version=${noSnapshotVersion}
-module.title=fme Javascript Console Share Aikau Extension
+module.title=Javascript Console Share Aikau Extension
 module.description=Adminstration console module to execute JavaScript code in Repository / Share web script, Repository action or Share page layer, including FreeMarker template where applicable
