Correct URL error and avoid JMX/core Java mess in tern JSON

--- a/javascript-console-repo/src/main/amp/config/alfresco/module/de.fme.alfresco.JavascriptConsole-repo/javascript-console-tern.properties
+++ b/javascript-console-repo/src/main/amp/config/alfresco/module/de.fme.alfresco.JavascriptConsole-repo/javascript-console-tern.properties
@@ -3,6 +3,9 @@ global.webscript.typeClassName=org.springframework.extensions.webscripts.Descrip
 global.config.typeClassName=org.springframework.extensions.webscripts.ScriptConfigModel
 global.url.typeClassName=org.springframework.extensions.webscripts.URLModel
 
+# Scriptable JMX API is just too nasty
+global.jmx.skip=true
+
 type.java.lang.String.ternName=JavaString
 type.java.lang.Character.ternName=JavaCharacter
 type.java.lang.Number.ternName=JavaNumber
@@ -35,13 +38,22 @@ type.java.lang.Object.notify.skip=true
 type.java.lang.Object.notifyAll.skip=true
 type.java.lang.Object.wait.skip=true
 type.java.lang.Object.toString.skip=true
-
+type.java.lang.Enum.declaringClass.skip=true
 type.java.util.Date.toInstant.skip=true
 
+type.org.springframework.extensions.webscripts.WebScript.execute.skip=true
 type.org.springframework.extensions.webscripts.ScriptableUtils.parseXMLNodeModel.skip=true
-
 type.org.springframework.extensions.webscripts.AbstractBaseDescription.parse.skip=true
 type.org.springframework.extensions.webscripts.AbstractBaseDescription.validateRootElement.skip=true
+
+# in case by any chance a property / method leaks class-related types, we don't want it to pull other core Java stuff in
+type.java.lang.Class.nameOnly=true
+type.java.lang.ClassLoader.nameOnly=true
+type.java.lang.reflect.Constructor.nameOnly=true
+type.java.lang.reflect.Method.nameOnly=true
+type.java.lang.reflect.Field.nameOnly=true
+type.java.lang.reflect.TypeVariable.nameOnly=true
+type.java.lang.annotation.Annotation.nameOnly=true
 
 # avoid leaking all Java services and classes only transitively associated due to bad API design 
 type.org.alfresco.service.ServiceRegistry.nameOnly=true
